--- a/config
+++ b/config
@@ -23,8 +23,8 @@ font-1 = MaterialIcons:size=10;0
 font-2 = Termsynu:size=8:antialias=false;-2
 font-3 = FontAwesome:size=10;0
 
-modules-left = powermenu mpd
-modules-right = volume backlight redshift-temp wireless-network wired-network battery date
+modules-left = mpd
+modules-right = volume backlight redshift-temp wireless-network wired-network battery date powermenu
 
 [bar/bottom]
 monitor = ${env:MONITOR:}
@@ -239,7 +239,7 @@ ramp-volume-3 = 
 [module/powermenu]
 type = custom/menu
 
-format-padding = 5
+;format-padding = 5
 
 label-open = 
 label-close = 
@@ -247,10 +247,10 @@ label-close = 
 menu-0-0 = Terminate WM
 menu-0-0-foreground = #fba922
 menu-0-0-exec = i3-msg exit
-menu-0-1 = Reboot
+menu-0-1 = "  Reboot"
 menu-0-1-foreground = #fba922
 menu-0-1-exec = i3exit reboot
-menu-0-2 = Power off
+menu-0-2 = "  Power off"
 menu-0-2-foreground = #fba922
 menu-0-2-exec = shutdown now
 
@@ -280,6 +280,7 @@ index-sort = true
 wrapping-scroll = false
 
 label-focused = %icon%
+label-focused-underline=#b89972
 label-focused-padding = 2
 
 label-unfocused = %icon%
